# tiny-clj

./: .clangd  .cursorrules  .gitignore  BENCHMARK_COMPARISON.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS_TAGGED_POINTERS.md  BINARY_SIZE_INVESTIGATION.md  BUILD_CONFIGURATION.md  CLOJURE_CORE_STATUS.md  CMakeLists.txt  CONSOLIDATED_BENCHMARK_SYSTEM.md  COW_TEST_ANALYSIS.md  CSV_BENCHMARK_MANAGEMENT.md  CTAGS_CURSOR_INTEGRATION.md  CURSOR_BUILD_GUIDE.md  DEVELOPER_INSIGHTS.md  DEVELOPMENT_IDEAS.md  DEVELOPMENT_INSIGHTS.md  DartConfiguration.tcl  EMBEDDED_100KB_ROADMAP.md  ERROR_HANDLING_GUIDE.md  ESP32_CROSS_COMPILATION.md  ESP32_MIGRATION_SUMMARY.md  MEMORY_POLICY.md  MIGRATION_GUIDE.md  Makefile  Makefile.benchmark  NS_FUNCTION_PLAN.md  PERFORMANCE_BENCHMARK_RESULTS.md  PERFORMANCE_DEVELOPMENT_ANALYSIS.md  PERFORMANCE_REPORT.md  PERFORMANCE_TRENDS_VISUAL.md  RC-COW.md  README.md  ROADMAP.md  TESTING_GUIDE.md  asan_output.txt  asan_output_fixed.txt  benchmark_baseline.clj  benchmark_baseline.csv  (+104 more)
.cache/clangd/index/: builtins.h.2285D6CBE33D7207.idx  byte_array.h.5C5798FEFE9EF4DE.idx  clj_string.h.DD542F1F43062EF4.idx  clj_strings.h.16968C0B5EBBE163.idx  common.h.7D202C13BD6D984C.idx  exception.h.35F08BA584D54026.idx  for_loop_tests.c.3609FEC8E7E371A9.idx  function.h.28C73F231A83A394.idx  function_call.h.10921D8AE9728308.idx  list.h.C9FC809B524E5D97.idx  map.h.A3449097877EFD78.idx  memory.h.429E48DC9EAC885C.idx  memory_profiler.h.6C85B1BE0F28483F.idx  memory_tests.c.0F405F8C8743250D.idx  meta.h.CC98368927F0A8E7.idx  namespace.h.C8D42603EF3E8D44.idx  object.h.01DF431FFC75E4A4.idx  parser.h.6D391C0EF88D8EFC.idx  reader.h.D8FF098D977A1A06.idx  runtime.h.2527CAB049A95619.idx  seq.h.053A9088156CE6E7.idx  symbol.h.848673CD5253E739.idx  test_cow_minimal.c.6854E945D631B365.idx  test_equal.c.C5937E29DE0256A8.idx  test_registry.h.A85704B534446722.idx  tests_common.h.78193F2EAD8D2376.idx  tiny_clj.h.CC9DE4C7F288FAF1.idx  types.h.FAB1606AB7A049C2.idx  unity.h.6837C7F4031F9962.idx  unity_internals.h.4ECB150EBEB501AA.idx  unity_test_runner.c.017F4250FFC00732.idx  utf8.h.774415E36C04272D.idx  value.h.E04B612F69B7DDA3.idx  vector.h.E5C576BEC2C15C8C.idx
.cursor/rules/: refcounting.mdc
Guides/: DEVELOPMENT_INSIGHTS.md  IMPROVEMENTS_SUMMARY.md  MEMORY_POLICY.md  MEMORY_PROFILING_GUIDE.md  NUMERICAL_PROMOTION.md  PERFORMANCE_GUIDE.md  RELEASE_NOTES.md  ROADMAP.md
Reports/: benchmark_baseline.csv  benchmark_previous.csv  executable_size_history.csv  function_size_analysis.md  memory_usage_comparison.md  seq_performance_analysis.md  special_forms_baseline.txt  test_data_analysis.md  utf8_size_impact.md
Testing/Temporary/: CTestCostData.txt
Tests/: test_arithmetic_and_builtins.c  test_autorelease_leak.c
benchmark_results/: defn_problem_summary.md  final_performance_comparison.md  jit_warmup_comparison.md  performance_comparison.md
benchmarks/: README.md  arithmetic_performance.clj  binarytrees.clj  clojure_benchmark_system.clj  complex_perf.clj  fannkuch.clj  fibonacci.clj  function_call_performance.clj  jit_warmup_benchmark.sh  let_chaining_benchmark.clj  let_chaining_test.clj  let_environment_chaining.clj  let_performance.clj  mandelbrot.clj  minimal_benchmark.clj  nbody.clj  run_benchmarks.sh  run_unified_benchmark.sh  simple_binarytrees.clj  simple_clojure_benchmarks.clj  simple_perf.clj  sleep_benchmark.clj  special_forms_perf.clj  spectralnorm.clj  sum_rec.clj  sum_rec_simple.clj  sum_squares.clj  unified_benchmark.clj
build-release/: CTestTestfile.cmake  DartConfiguration.tcl  tiny-clj-repl
docs/: BUILTIN_SYMBOL_OPTIMIZATION.md  DEVELOPMENT_INSIGHTS.md  ERROR_HANDLING_GUIDE.md  FLOAT16_SUPPORT.md  MEMORY_POLICY.md  MEMORY_PROFILER.md  PERFORMANCE_GUIDE.md  RELEASE_NOTES.md  ROADMAP.md  TESTING_GUIDE.md
libs/clojure/benchmarksgame/: fibonacci.clj  fibonacci_simple.clj
libs/test/: ns.clj
libs/tinyclj/benchmarksgame/: binarytrees_tiny.clj
scripts/: analyze_function_sizes.sh  auto_benchmark.sh  benchmark.sh  benchmark_analyzer.sh  benchmark_compare.sh  benchmark_optimized.sh  benchmark_with_analysis.sh  benchmark_with_csv.sh  ci_benchmark.sh  cleanup_benchmark_scripts.sh  cleanup_old_functions.sh  count_code_changes.sh  demo_performance_changes.sh  micro_benchmark.sh  profile_performance.sh  run_benchmarks.sh  run_benchmarks_now.sh  run_unit_tests.sh  setup_commit_hooks.sh  setup_esp32_toolchain.sh  setup_git_hooks.sh  size_trend_analyzer.sh
src/: CljObject.c  CljObject.h  args_utils.c  args_utils.h  benchmark.c  benchmark.h  builtins.c  builtins.h  byte_array.c  byte_array.h  channel.c  channel.h  clj_error.c  clj_object.h  clj_parser.c  clj_parser.h  clj_string.h  clj_strings.h  clj_symbols.c  clj_symbols.h  clojure.core.clj  clojure_core.c  common.h  debug.h  embedded_stubs.c  environment.h  error_messages.c  error_messages.h  event_loop.c  event_loop.h  exception.c  exception.h  executable_size.c  executable_size.h  function.h  function_call.c  function_call.h  kv_macros.h  line_editor.c  line_editor.h  (+58 more)
src/tests/: README.md  byte_array_tests.c  cow_assumptions_tests.c  demo_array_system.c  exception_tests.c  fixed_point_tests.c  for_loop_tests.c  kv_macros_demo.c  map_benchmark.c  memory_tests.c  minunit.h  namespace_tests.c  parser_tests.c  run_tests_main.c  seq_tests.c  test-exception-handling.c  test-namespace.c  test_all_main.c  test_alloc_macros.c  test_api.h  test_assertions.c  test_basics.c  test_benchmark.c  test_benchmark_main.c  test_clj_object.c  test_clojure_core.c  test_clojure_core_minunit.c  test_cow.c  test_cow_assumptions.c  test_cow_eval_integration.c  test_cow_minimal.c  test_cow_simple_eval.c  test_defn.c  test_do.c  test_dotimes.c  test_equal.c  test_eval_string_api.c  test_exception.c  test_executable_size.c  test_file_io.c  (+54 more)
toolchains/: esp32.cmake  macos.cmake  stm32.cmake
